Last updated for this version

--- a/band_02/asche_im_wind/asche-im-wind.tex
+++ b/band_02/asche_im_wind/asche-im-wind.tex
@@ -181,7 +181,7 @@ Hier werden ein paar mögliche Begegnungen beschrieben, die die Helden haben kö
 Jagdregeln finden sich \ilaris{68}. Die Basis bilden dabei Proben auf \emph{Überleben}.
 Das Svelltland kann hierfür als \emph{wildreich} gelten, die Schwierigkeit liegt also nur bei 12.
 
-(Wesentlich ausführlichere Listen von Tieren: \emph{Zoo-Botanica:277--280}.)
+(Wesentlich ausführlichere Listen von Tieren: \emph{\href{https://de.wiki-aventurica.de/wiki/Zoo-Botanica_Aventurica}{Zoo-Botanica}:277--280}.)
 
 Die meiste Zeit wird die Gruppe Gewässer in der Nähe haben, zu Beginn die sumpfigen Gegenden zwischen \textbf{Lowangen} und \textbf{Svellmia},
 dazu den \textbf{Lowanger Svellt} oder den \textbf{Svall}, die alle früher oder später in den großen Flusslauf münden.
