--- a/band_02/bergkoenig/in-den-hallen-des-bergkoenigs.tex
+++ b/band_02/bergkoenig/in-den-hallen-des-bergkoenigs.tex
@@ -7,13 +7,13 @@ In diesem Abenteuer kann eine Gruppe in \textbf{Finsterkoppen},
 der Hauptstadt des Bergkönigreichs eines zwergischen Volkes im \textbf{Finsterkamm},
 eine Intrige um die Einsetzung eines Hochkönigs aufdecken und damit die Spaltung in zwei Völker auslösen.
 
-Dies ist auch der Plot von \emph{Im Traumlabyrinth} (Schmidt Spiele, 1990).
-Während die Ergebnisse dieses Abenteuers in jüngeren Publikationen (wie \emph{Angroschs Kinder} (Fanpro, 2005))
+Dies ist auch der Plot von \emph{\href{https://de.wiki-aventurica.de/wiki/Im_Traumlabyrinth}{Im Traumlabyrinth}} (Schmidt Spiele, 1990).
+Während die Ergebnisse dieses Abenteuers in jüngeren Publikationen (wie \emph{\href{https://de.wiki-aventurica.de/wiki/Angroschs_Kinder}{Angroschs Kinder}} (Fanpro, 2005))
 übernommen wurde, passen die Inhalte des Abenteuers selbst nicht in das später entwickelte Aven\-turien\-bild und ergeben auch keinen spannenden Spielabend.
 Ich wollte daher die Möglichkeit bieten, die historische Entwicklung im Rahmen einer anderen Handlung miterleben zu können
 und dabei Orte und Figuren kennen zu lernen, die in später stattfindenden Abenteuern wieder eine Rolle spielen (können).
 
-Den Schauplatz \textbf{Finsterkoppen} und die \textbf{Finsterkopp-Binge} waren schon im Computerspiel \emph{Sternenschweif} (Attic, 1994) zu erkunden. %, das ich vor etwa 20 Jahren das letzte Mal gespielt habe.
+Den Schauplatz \textbf{Finsterkoppen} und die \textbf{Finsterkopp-Binge} waren schon im Computerspiel \emph{\href{https://de.wiki-aventurica.de/wiki/Sternenschweif_(1994)}{Sternenschweif}} (Attic, 1994) zu erkunden. %, das ich vor etwa 20 Jahren das letzte Mal gespielt habe.
 %Was mir davon noch in Erinnerung war, habe ich verarbeitet.
 Ich habe für den Anhang auf die Liste der Gebäude aus \link{https://www.kunar.eu/nlt/finsterkoppen.htm}{Kunars Reiseführer} zurückgegriffen.
 Die Idee von Rattengold als überschwerem 13.\,Unmetall haben Simon Schollenberger, Stefan Weber und Stefan Löffler für das Wettbewerbs-Abenteuer \enquote{\link{https://www.orkenspalter.de/filebase/index.php?file/53-totgeboren/}{Totgeboren}} entwickelt.
@@ -51,13 +51,13 @@ der diese zu seinen Gunsten beeinflussen wollte.
 
 \subsection*{Was wird zum Spielen benötigt?}
 Für erfahrene Spielleitungen dürfte das Abenteuer selbst sowie die Ilaris-Regeln als Grundlage zur Gestaltung des Spielabends ausreichen.
-Wenn Sie mit der Welt Aventurien noch nicht viel Kontakt hatten, empfehle ich zur Vorbereitung den Band \emph{Angroschs Kinder} (Fanpro, 2005, im folgenden \emph{AK}).
+Wenn Sie mit der Welt Aventurien noch nicht viel Kontakt hatten, empfehle ich zur Vorbereitung den Band \emph{\href{https://de.wiki-aventurica.de/wiki/Angroschs_Kinder}{Angroschs Kinder}} (Fanpro, 2005, im folgenden \emph{AK}).
 Dieser Band ist leider vergriffen und gebraucht kaum erhältlich.
-Günstiger ist \emph{Die Zwerge Aventuriens} (Schmidt Spiele, 1993, im folgenden \emph{DZA}) gebraucht zu bekommen,
+Günstiger ist \emph{\href{https://de.wiki-aventurica.de/de/index.php?title=Die_Zwerge_Aventuriens&redirect=no}{Die Zwerge Aventuriens}} (Schmidt Spiele, 1993, im folgenden \emph{DZA}) gebraucht zu bekommen,
 das jedoch älter und weniger umfangreich ist.
 
 Ebenso empfehle ich weniger erfahrenen Spielleitungen einen Blick in eine Spielhilfe zum Thema Dungeon.
-\emph{Katakomben und Kavernen} (Ulisses, 2010, im folgenden \emph{KK})
+\emph{\href{https://de.wiki-aventurica.de/wiki/Katakomben_und_Kavernen}{Katakomben und Kavernen}} (Ulisses, 2010, im folgenden \emph{KK})
 ist noch als ebook erhältlich.
 Die kostenfreie Spielhilfe \enquote{\link{https://www.orkenspalter.de/filebase/index.php?file/2724-fackelschein-und-kellerstaub/}{Fackelschein und Kellerstaub}} von Ulrich Lang
 zum selben Thema ist meines Erachtens ähnlich nützlich.
@@ -104,15 +104,15 @@ Legen sie daher Wert darauf, diese Kultur auch vorzustellen. Das Abenteuer bedie
 
 Sie können hier  Spuren zur untergegangenen \textbf{Binge Umrazim} (\emph{KK:173}) legen,
 falls ihre Gruppe im späteren Spiel nach diesem großen Geheimnis der Kinder Angroschs suchen soll.
-In diesem Sinne habe ich es an \emph{Wohin der Schatten fällt} von Kathrin Lieb (in: \emph{Ehrenhändel} (FanPro, 2006)) angeschlossen,
+In diesem Sinne habe ich es an \emph{\href{https://de.wiki-aventurica.de/wiki/Wohin_der_Schatten_fällt}{Wohin der Schatten fällt}} von Kathrin Lieb (in: \emph{\href{https://de.wiki-aventurica.de/wiki/Ehrenhändel}{Ehrenhändel}} (FanPro, 2006)) angeschlossen,
 wo ebenfalls Hinweise auf \textbf{Umrazim} zu finden sind.
 
 Ebenso ruht unter \textbf{Finsterkoppen} -- tiefer, als dieses Abenteuer führt -- bis 1011 BF der \textbf{Salamanderstein}, der als Zeichen des \textbf{Saljeth-Paktes} Symbol des geeinten Kampfs von Kindern Angroschs und Elfen gegen die Orkgefahr darstellt.
 Die Suche nach diesem Artefakt könnte die Gruppe nach \textbf{Finsterkoppen} führen.
 Genauso wäre es möglich, einige Jahre später im Rahmen dieser Suche zurückzukehren.
-Und hat der Salamanderstein nicht vielleicht etwas mit dem \textbf{Stein der Simia} (\emph{Brogars Blut}, Fanpro 1998), dem \textbf{Feuer Ingras} (\emph{Feuerbringer}, Ulisses 2013) oder \textbf{Angrosch ka Broschrardosch} (\emph{KK:111}) zu tun?
+Und hat der Salamanderstein nicht vielleicht etwas mit dem \textbf{Stein der Simia} (\emph{\href{https://de.wiki-aventurica.de/wiki/Brogars_Blut}{Brogars Blut}}, Fanpro 1998), dem \textbf{Feuer Ingras} (\emph{\href{https://de.wiki-aventurica.de/wiki/Feuerbringer}{Feuerbringer}}, Ulisses 2013) oder \textbf{Angrosch ka Broschrardosch} (\emph{KK:111}) zu tun?
 
-Weitere verlassene Bauten der Finsterkamm-Zwerge kommen in den Abenteuern \emph{Odem der Kälte} (Fanpro, 2010) sowie \emph{Das Geheimnis des Drachenritters} (Ulisses, 2019) vor.
+Weitere verlassene Bauten der Finsterkamm-Zwerge kommen in den Abenteuern \emph{\href{https://de.wiki-aventurica.de/wiki/Odem_der_Kälte}{Odem der Kälte}} (Fanpro, 2010) sowie \emph{\href{https://de.wiki-aventurica.de/wiki/Das_Geheimnis_des_Drachenritters}{Das Geheimnis des Drachenritters}} (Ulisses, 2019) vor.
 \spaltenende
 \begin{center}
 	\zeichnung[0.75\textwidth]{Drache.jpg}
@@ -438,7 +438,7 @@ Für den nächsten Tag wird der \textbf{Tiefe Rat} erneut zusammengerufen.
 }
 
 \begin{center}
-\bild[0.8\textwidth]{Zwergenrat.jpg}
+\bild[0.8\textwidth]{Zwergenrat.png}
 \end{center}
 
 \spaltenanfang
@@ -889,20 +889,25 @@ Nach dem Kampf kann die Gruppe das Szepter bergen. Es besteht hauptsächlich aus
 Ein großer \textbf{Serpentin} ist an zentraler Stelle eingebettet.
 \\
 Auch einige Waffen und Werkzeuge finden sich in den amorphen Überresten der Amöbe. Diese sind natürlich von hervorragender Qualität (3xHQ und mehr, \emph{gutes Werkzeug} (\ilaris{61})), waren hier aber eigentlich zur ewigen Ruhe gebettet. Etwas mitzunehmen könnten Angrosch und auch Boron als Frevel auffassen \dots
+\vspace{1cm}
+\begin{center}
+\includegraphics[width=0.45\linewidth]{Lindwurmschlägl}
+\end{center}
 
+\columnbreak
 \subsubsection{Immer diese Schrate!}
 \begin{center}
 	\zeichnung{Wuehlschrat.png}
 \end{center}
 Beim Austritt aus der Gruft stellt sich heraus, dass die Wühlschrate während des Kampfes den Mechanismus der Brücke zerbissen haben. Sie bleibt dauerhaft abgesenkt.
 \spaltenende
+\vfill
 \probenkasten[bild=athletik,farbe=rot, gruppenprobe=nein, zusammenarbeit=nein, pw=24,
 erfolg={Nach dem ersten Erfolg kann ein Seil herübergeworfen werden. Weitere Proben entfallen.},
 misserfolg={Ein Fehlschlag führt bäuchlings auf die harte Oberfläche: W6+4~SP.},
 ]
 {Akrobatik}{Der Sprung auf den Grat ist leicht. Schwer ist, punktgenau auf der schmalen und glatten Oberfläche zu landen. }
-\platz
-
+\vfill
 \spaltenanfang
 
 \subsection{Weitere Ebenen}
