--- a/band_02/klamm_und_heimlich/klamm-und-heimlich.tex
+++ b/band_02/klamm_und_heimlich/klamm-und-heimlich.tex
@@ -5,7 +5,7 @@
 \abschnitt{Überblick}
 Im \textbf{Greifenfurt}er Umland erfahren die Helden von einem Ork-Überfall, bei dem der \textbf{Knappe Alfdan} entführt wurde, und nehmen die Verfolgung auf.
 Die Fährte führt zu einer Klamm, wo sich die Orks eingenistet haben, um von hier aus \textbf{Gut Nebelstein} zu erobern.
-Nur mit List und Geschick werden es die Helden schaffen, die Orks und ihre Handlanger zu überwinden, den \textbf{Knappen Alfdan} zu befreien und dem plötzlich auftauchenden Elitetrupp des \textbf{Ork-Schamane}n zu entkommen.
+Nur mit List und Geschick werden es die Helden schaffen, die Orks und ihre Handlanger zu überwinden, den \textbf{Knappen Alfdan} zu befreien und dem plötzlich auftauchenden Elitetrupp des Ork-Schamanen \textbf{Shurrak Windzahn} zu entkommen.
 \info{
 \textbf{Die Erfahrungsstufe der Helden}
 
@@ -99,9 +99,9 @@ Beachte dabei, dass die Gegner ebenfalls alles versuchen werden, um siegreich au
 aber auch fliehen werden, wenn sie die Niederlage kommen sehen.
 }
 
-Die enge, unterirdische Klamm wird in rund zehn Metern Tiefe von einem ohrenbetäubend rauschenden Gewässer durchströmt (einem Zufluss der \textbf{Breite} bei \textbf{Gut Nebelstein}).
+Die enge, unterirdische Klamm (Karte auf S. \pageref{kuh_ho2}) wird in rund zehn Metern Tiefe von einem ohrenbetäubend rauschenden Gewässer durchströmt (einem Zufluss der \textbf{Breite} bei \textbf{Gut Nebelstein}).
 Die völlig ungesicherte Schlucht ist oben offen und macht den Nachthimmel sichtbar.
-Diesseits des Abgrunds hat gerade ein Minentrupp, bestehend aus dem beschriebenen \textbf{Oger} (starke Blähungen, dumm, launisch, spricht wie auch alle Orks und Goblins in der Sprache der Helden mit einfachen Worten; Werte \emph{Ilaris:103}) und drei rotpelzigen \textbf{Goblin}s (mager, lispeln, unterwürfig, \emph{Ilaris:101}), ein größeres Stück freiliegendes Erz abgeschlagen.
+Diesseits des Abgrunds hat gerade ein Minentrupp, bestehend aus dem beschriebenen \textbf{Oger} (starke Blähungen, dumm, launisch, spricht wie auch alle Orks und Goblins in der Sprache der Helden mit einfachen Worten; Werte \ilaris{103}) und drei rotpelzigen \textbf{Goblin}s (mager, lispeln, unterwürfig, \ilaris{101}), ein größeres Stück freiliegendes Erz abgeschlagen.
 Der Brocken hat jedoch einige benachbarte Stücke weggeschleudert und der folgende Steinschlag einen der beiden hier angebundenen, beim Überfall erbeuteten Ochsen in die Tiefe gerissen.
 Der mit Spitzhacken, Eimern und Seilen ausgerüstete Trupp blickt deswegen noch gebannt auf den Abgrund.
 
@@ -122,7 +122,7 @@ Wende dich nun an den ersten Helden, der hochkommt!
 
 \vorlesen{Als du dich der Felskante näherst, braust eine Stichflamme knapp über deinen Kopf hinweg. Du lauschst und hörst, wie sich eine krächzende Stimme die Seele aus dem Leib hustet. Von der Seite wird die Person über dir offenbar angebrüllt:
 	
-	„AAAH! Jetzt hast du SCHON WIEDER meine Haare angesengt! WASSER!!“ Du hörst ein Zischen, bevor das Geschimpfe weiter geht: „Ich hätte \textbf{Shurrak Windzahn} sagen sollen, dass wir dich und das Ei über der Esse hätten braten sollen, anstatt dich als Lehrling einzustellen!!“
+	„AAAH! Jetzt hast du SCHON WIEDER meine Haare angesengt! WASSER!!!“ Du hörst ein Zischen, bevor das Geschimpfe weiter geht: „Ich hätte \textbf{Shurrak Windzahn} sagen sollen, dass wir dich und das Ei über der Esse hätten braten sollen, anstatt dich als Lehrling einzustellen!“
 	
 	Als du über die Kante spähst, siehst du zu deiner Linken ein \textbf{Reptil} von knapp einem Meter Größe, das um Atem ringt und sich über eine in voller Glut stehende Feuerstelle beugt.
 	
@@ -175,7 +175,7 @@ Mehr dazu unten unter \ref{ideen}{\enquote{Ideen für ein Folgeabenteuer}}.
 
 Wenn die Helden am Zelt vorbeispähen, so entdecken sie entlang der Höhlenwand rund zwanzig leere Strohsäcke. In einem davon befinden sich ein Kurzbogen, ein Köcher mit 4~Pfeilen, darunter ein Brandpfeil, und einige bissige Bettwanzen.
 
-Am linken Ende der Höhle bewacht ein zweiköpfiger Oger (Werte \emph{Ilaris:103}, Variante Kriegsoger) eine Holztür.
+Am linken Ende der Höhle bewacht ein zweiköpfiger Oger (Werte \ilaris{103}, Variante Kriegsoger) eine Holztür.
 Seine zwei Köpfe \textbf{Bagmun} (misstrauisch und einigermaßen schlau, weiche Stimme) und \textbf{Ragmun} (aggressiv und einfältig, dumpfe Stimme) streiten wie ein altes Ehepaar und sind sich nur darin einig, dass sie beide gerne Menschen fressen.
 Die Holztür führt zum \textbf{Verhörraum} und ist von hier mit einem massiven, sehr schweren und fies eingeklemmten Holzbalken blockiert.
 Zufälligerweise können die Helden beobachten, wie ein Wachork den Verhörraum verlassen will und dazu von innen ein Klopfzeichen macht (kurz, lang, kurz, lang), woraufhin der Wachoger die Tür öffnet und danach sofort wieder verriegelt.
@@ -203,27 +203,29 @@ Die folgende Szene thematisiert Folter. Damit soll vor dem Finale das Blut der H
 }
 
 \vorlesen{
-Als ihr euch nähert, hört ihr einen schmerzverzerrten Schrei. Etwas Metallisches fällt zu Boden. Eine grunzige Stimme blökt: „Ich ziehe dir auch die anderen Nägel, wenn du nicht sofort verrätst, wo sich dieser verdammte Fluchttunnel befindet!!
+Als ihr euch nähert, hört ihr einen schmerzverzerrten Schrei. Etwas Metallisches fällt zu Boden. Eine grunzige Stimme blökt: „Ich ziehe dir auch die anderen Nägel, wenn du nicht sofort verrätst, wo sich dieser verdammte Fluchttunnel befindet!
 
-Was, immer noch nicht?? Na warte, bis ich mit dir fertig bin \dots“
+Was, immer noch nicht?! Na warte, bis ich mit dir fertig bin \dots“
 }
-Durch den Türspalt kann man drei bis fünf mit Arbach-Säbeln bewaffnete Ork-Krieger \emph{(Ilaris:104)} beobachten. Auf dem Tisch liegt das Kurzschwert des Knappen (mit Gut-Nebelstein-Gravur auf dem Knauf).
+Durch den Türspalt kann man drei bis fünf mit Arbach-Säbeln bewaffnete Ork-Krieger (\ilaris{104}) beobachten. Auf dem Tisch liegt das Kurzschwert des Knappen (mit Gut-Nebelstein-Gravur auf dem Knauf).
 
 \zeichnung[0.3\textwidth]{Goblin.png}
 
-Hauptork \textbf{Siburash Eberschrei} (Kriegshammer, Nasenring, trägt gut sichtbar einen Schlüsselbund mit dem Schlüssel zu Alfdans Ketten) und Wachork \textbf{Blorg} (Hasenscharte) verhören gerade gewaltsam den an der Wand gegenüber in Ketten gelegten Knappen \textbf{Alfdan} (dunkelblonder Bürstenschnitt, pummelig, Doppelkinn, gutmütig; aktuell kampfunfähig mit fünf Punkten Erschöpfung und nicht imstande zu gehen, Werte wie \emph{Stadtwache}, \emph{Ilaris:107}).
+\columnbreak
 
-
+Hauptork \textbf{Siburash Eberschrei} (Kriegshammer, Nasenring, trägt gut sichtbar einen Schlüsselbund mit dem Schlüssel zu Alfdans Ketten) und Wachork \textbf{Blorg} (Hasenscharte) verhören gerade gewaltsam den an der Wand gegenüber in Ketten gelegten Knappen \textbf{Alfdan} (dunkelblonder Bürstenschnitt, pummelig, Doppelkinn, gutmütig; aktuell kampfunfähig mit fünf Punkten Erschöpfung und nicht imstande zu gehen, Werte wie \emph{Stadtwache}, \ilaris{107}).
 
 Auf dem Boden liegen eine blutige verbogene Zange und eine dreckige Peitsche.
 Eine über dem Tisch hängende Laterne ist die einzige Lichtquelle.
 
 Sollten die Helden es schaffen, den Knappen aus dem Verhörraum zu befreien, so beginnt das \textbf{Finale}.
 
-\info{
-\textbf{Regeln für den Kampf}
+\zeichnung[0.8\linewidth]{Gruppenprobe}
 
-Sollte es zum Kampf kommen, bestimmst du zunächst, in welcher Reihenfolge die Beteiligten agieren können:
+\info{
+\textbf{Regeln für den Kampf (\ilaris{36})}
+
+Sollte es zum Kampf kommen, bestimme zunächst, in welcher Reihenfolge die Beteiligten agieren können:
 Wer die höhere Initiative hat, handelt zuerst.
 
 Bei jedem Angriff wird eine vergleichende Probe fällig: Beide würfeln 1W20, wobei der Angreifer den Attackewert (AT*) der verwendeten Waffe addiert, der Verteidiger hingegen seinen Verteidigungswert (VT*). Hat der Angreifer das höhere Ergebnis erzielt, hat er getroffen und würfelt die angerichteten Trefferpunkte (TP*) aus.
@@ -243,7 +245,7 @@ Ab der dritten Einschränkung erleidet der Charakter Wundabzüge für alle Probe
 
 \abschnitt{Finale}
 Als die Helden den Verhörraum verlassen, öffnet sich in der Baracke mit einem lauten Schlag das doppelflüglige Tor zum Orkland.
-Der Schamane \textbf{Shurrak Windzahn} \label{finale} (Knochenkeule, Fellüberwurf, trägt \textbf{Greifax}' Ei bei sich, spricht kehlig-brüllend, braucht militärische Erfolge, Werte siehe Anhang) betritt mit einem Trupp aus fünfzehn Ork-Kriegern \emph{(Ilaris:104)} die Baracke.
+Der Schamane \textbf{Shurrak Windzahn} \label{finale} (Knochenkeule, Fellüberwurf, trägt \textbf{Greifax}' Ei bei sich, spricht kehlig-brüllend, braucht militärische Erfolge, Werte siehe Anhang) betritt mit einem Trupp aus fünfzehn Ork-Kriegern (\ilaris{104}) die Baracke.
 
 Er will sich nach der Entführung des Knappen erkundigen, aus diesem die Lage eines geheimen Fluchttunnels zu \textbf{Gut Nebelstein} herauspressen und die Burganlage dann noch in derselben Nacht überfallen.
 
@@ -350,15 +352,18 @@ Falls du den Handlungsfaden hier enden lassen willst, dann ist \textbf{Treudane}
 	\trennlinie
 	\kreaturwaffe{Knochenkeule}{1}{10}{10}{2W6+1}{Kopflastig, Stumpf, Niederwerfen}
 	\trennlinie
-	\kreaturinfo{Zauber}{Tairachs Krieger \textit{Ilaris:164}, 
-		Brazoraghs Hieb (\textit{Ilaris:164}) ist bereits in Knochenkeule eingerechnet, 
-		Geistertausch (\textit{Ilaris:165})}
+	\kreaturinfo{Zauber}{Tairachs Krieger \ilaris{164}, 
+		Brazoraghs Hieb (\ilaris{164}) ist bereits in Knochenkeule eingerechnet, 
+		Geistertausch (\ilaris{165})}
 	
 	\kreaturinfo{Geistertausch}{Der Schamane hat sich ein paar Schuppen von Greifax gesichert 
 		und könnte die Flucht behindern, 
 		indem er mit ihm die Seele tauscht und den Helden mit dem Flammenodem den Ausweg versperrt. 
 		Seinen eigenen Körper lässt er währenddessen von zwei Ork-Kriegern festhalten.
 		Wenn er in Eile ist, verringert der Schamane die Vorbereitungszeit mittels der Modifikation 
-		\textit{Vorbereitungszeit verkürzen} (\textit{Ilaris:71}) von 16 auf 8 Aktionen.}
+		\textit{Vorbereitungszeit verkürzen} (\ilaris{71}) von 16 auf 8 Aktionen.}
 }
 \spaltenende
+\begin{center}
+\includegraphics[width=0.33\linewidth]{oger}
+\end{center}
