--- a/band_02/main.tex
+++ b/band_02/main.tex
@@ -102,107 +102,20 @@
 	\end{centering}
 }
 \neueseite
-%TODO
-
-%Neue Slogans Sephrasto
-% Überschriften außerhalb von multicols zentriert?
-%Spielhilfen: Beschreibung der Brauerei (ggf. mit Videos)
-%Neue Illustrationen einpflegen
-%Nachbesserungen der verbleibenden Autor*innen
-%TODO
-
-
-\subsection*{Version 0.8 vom \today}
-Cover ausgetauscht
-
-Titelgrafiken zwei Abenteuer
-
-Goblin-Illustration ins richtige Abenteuer versetzt
-
-Illustration von Alnus (Platzhalter)
-
-\subsection*{Versionsgeschichte}
-
-
-\subsubsection*{Version 0.7}
-Titelseiten-Design vorbereitet und zwei Grafiken Bernard eingefügt
-
-Vorwort eingefügt
-
-Nachbesserungen \enquote{Asche}
-
-Korrektorat Charakterbögen \enquote{Bergkönig} und Illustration von Zillie Zeh
-
-Anhänge zum Ausdrucken ans Ende verschoben
-
-
-\subsubsection*{0.6}
-Inhaltsverzeichnis gekürzt
-
-Encounter-Spielhilfe fertig layoutet und mit dem Autor abgestimmt
-
-\enquote{Schwarze Hand} fertig layoutet
-
-Abenteuer aus dem Bestand bebildert
-
-Kleinere Korrekturen
-
-%\subsubsection*{0.5}
-%Encounter-Spielhilfe eingefügt und erste Hälfte layoutet
-%
-%Reihenfolge der Abenteuer verändert
-%
-%Todo-Liste für den Satz angelegt
-%
-%Finetuning \enquote{Schwarze Hand}
-%
-%Übersicht über die Spielhilfen begonnen
-%
-%Überarbeitung \enquote{Hallen des Bergkönigs} nach Jury-Feedback
-%
-%Autor*innennamen hinzugefügt
-%
-%IHVZ-Einträge für Charaktere, Leere Seiten aus den Charakterbögen gekürzt 
-%
-%Höhlenkarte (\enquote{Klamm und heimlich}) eingebunden
-%
-%Kleinere Korrekturen 
-%
-%\subsubsection*{0.4}
-%Charakterbögen eingebunden
-%
-%IHVZ angepasst  
-%
-%Groblayout viertes Abenteuer 
-%
-%Kreaturenkästen für Klamm und heimlich
-
-%\subsubsection*{0.3}
-%Vereinheitlichung Zitation und andere Markups in den drei Abenteuern
-%
-%Plätze für Grafiken (vorbehaltlich Textänderungen nach Feedback)
-%
-%Hierarchie der Überschriften vereinheitlicht
-
-%\subsubsection{0.2}
-%Groblayout drei Abenteuer
-%
-%Einbau Probenkästen
-%
-%Interne Referenzen
-
-
-%TODO: Formatierungskonventionen
-%Zitatangaben kursiv und mit Doppelpunkt: \emph{Reich des roten Mondes:69}, das Regelbuch als \ilaris{9}.
-%\textbf{NSC}, \textbf{Aventurische Begriffe}, \emph{Regelwerk-Begriffe}, \textsc{Name von Zauber oder Liturgie}.
-
 
 \platz
-
-\credit{Organisation und Redaktion}{
-	\href{https://github.com/XaverStiensmeier}{Xaver Stiensmeier}
-}
-
+{\Large
+\vspace*{0.5cm}
+\begin{center}
+\textbf{Version 0.9 vom \today}
+\end{center}
+\vspace*{0.25cm}
+\begin{center}
+{\Large
+\textit{Dein Wille ist Leben und Tod und der Grat dazwischen.}\\
+--- aus den Chroniken von Ilaris}
+\end{center}
+\vfill
 \credit{Abenteuer-Autor*innen}{
 	Matthias Ott\\
 	Tilmann Kircher\\
@@ -211,6 +124,7 @@ Kleinere Korrekturen
 	Matthias Thanos
 	
 }
+
 \credit{Spielhilfen-Autor*innen}{	
 	Arne Strehlow\\
 	Alrik Normalpaktierer
@@ -223,7 +137,9 @@ Kleinere Korrekturen
 	Matthias Thanos\\
 	% Norman Obst\\
 	% René Dudziak\\
-	\href{https://www.zillie-zeh.de/}{Zillie Zeh}
+	\href{https://www.zillie-zeh.de/}{Zillie Zeh}\\
+	\href{https://www.nga.gov/}{National Gallary of Art}\\
+	\href{https://www.flickr.com/photos/britishlibrary/albums/with/72157640537276514}{British Library}\\
 }	
 \credit{\LaTeX-Klasse}{
 	\href{https://github.com/ilaris-tools/IlarisTex}{Lukas Ruhe}
@@ -241,6 +157,10 @@ Kleinere Korrekturen
 	Tilmann Kircher\\
 	Xaver Stiensmeier
 }
+
+\credit{Organisation und Redaktion}{
+	\href{https://github.com/XaverStiensmeier}{Xaver Stiensmeier}
+}}
 \lizenz
 \inhaltsverzeichnis
 \neueseite
@@ -267,7 +187,7 @@ Das Ilaris-Regelbuch wird im folgenden mit \emph{Ilaris} und der entsprechende S
 
 \columnbreak
 
-Größere Kästen ermöglichen komplexere Proben z.B. solche mit Auswirkung je nach Anzahl Hoher Qualität. Ist \textit{Zusammenarbeit} (\ilaris{8}) erlaubt \texticon{probe_zusammenarbeit_ja} oder nicht \texticon{probe_zusammenarbeit_nein}? Handelt es sich um eine \textit{Gruppenprobe} (\ilaris{8}), wo der beste Charakter \texticon{probe_gruppenprobe_gut}, oder wo der schlechteste Charakter würfelt \texticon{probe_gruppenprobe_schlecht}, oder ist es gar keine Gruppenprobe \texticon{probe_gruppenprobe_nein}? Wird mit 3W20 \texticon{wuerfel_rot_3} oder 1W20 \texticon{wuerfel_rot_1} gewürfelt - dabei wird auch direkt die Schwierigkeit angegeben, wenn es sich um eine offene Probe handelt? Proben mit einem Detailgrad über eins \texticon{probe_detailgrad_1} (\ilaris{9}) sind \textit{ausgedehnte Proben} mit Detailgrad zwei \texticon{probe_detailgrad_2}, drei \texticon{probe_detailgrad_3} oder sogar vier \texticon{probe_detailgrad_4}. Zuletzt wird noch angegeben, ob eine \textit{offene Probe} \texticon{probe_vergleichend_nein} oder eine \textit{vergleichende Probe} \texticon{probe_vergleichend_ja} gewürfelt wird (\ilaris{9}). Ein Beispiel:
+Größere Kästen ermöglichen komplexere Proben z.B. solche mit Auswirkung je nach Anzahl Hoher Qualität. Im Sinne der Übersichtlichkeit werden verschiedene Symbole benutzt, um die Probe zu beschreiben: Ist \textit{Zusammenarbeit} (\ilaris{8}) erlaubt \texticon{probe_zusammenarbeit_ja} oder nicht \texticon{probe_zusammenarbeit_nein}? Handelt es sich um eine \textit{Gruppenprobe} (\ilaris{8}), wo der beste Charakter \texticon{probe_gruppenprobe_gut}, oder wo der schlechteste Charakter würfelt \texticon{probe_gruppenprobe_schlecht}, oder ist es gar keine Gruppenprobe \texticon{probe_gruppenprobe_nein}? Wird mit 3W20 \texticon{wuerfel_rot_3} oder 1W20 \texticon{wuerfel_rot_1} gewürfelt - dabei wird auch direkt die Schwierigkeit angegeben, wenn es sich um eine offene Probe handelt? Proben mit einem Detailgrad über eins \texticon{probe_detailgrad_1} (\ilaris{9}) sind \textit{ausgedehnte Proben} mit Detailgrad zwei \texticon{probe_detailgrad_2}, drei \texticon{probe_detailgrad_3} oder sogar vier \texticon{probe_detailgrad_4}. Zuletzt wird noch angegeben, ob eine \textit{offene Probe} \texticon{probe_vergleichend_nein} oder eine \textit{vergleichende Probe} \texticon{probe_vergleichend_ja} gewürfelt wird (\ilaris{9}). Ein Beispiel:
 
 \probenkasten[
 bild=beeinflussung,
@@ -280,8 +200,11 @@ farbe=rot
 ]{Überreden}{%
 Kannst du die Brückentrolle überreden? Wenn du dich traust 2 HQ anzusagen (Probe -8 erschwert) und dir die Probe dennoch gelingt, kannst du den Troll sogar überreden, dir zu helfen.
 }
+Nutzt du diese Publikation digital, kannst du auf die Titel der Abenteuer klicken, um alle Kreaturen des Abenteuers im Browser anzuzeigen. Außerdem kannst du auf alle Seitenzahlen aus dem Ilaris Regelwerk klicken, um ein PDF der Seite im Browser zu öffnen. Zudem sind Verweise auf den Anhang auch verlinkt, sodass du schneller im Abenteuer selbst springen kannst. Wir empfehlen, Handouts vorab auszudrucken.
 \vfill
-\includegraphics[width=\linewidth]{offene_lizenz/owl_nb}
+\begin{center}
+\includegraphics[width=0.8\linewidth]{offene_lizenz/owl_nb}
+\end{center}
 
 Wir wünschen euch viel Spaß beim Spielen und freuen uns über jede Rückmeldung und Anregung!
 
