--- a/band_02/schwarze_hand/schwarze-hand.tex
+++ b/band_02/schwarze_hand/schwarze-hand.tex
@@ -423,3 +423,5 @@ Die gutaussehende Hexe mit dem langen rotbraunen Haar ist nicht nur als Schreibe
 Sie kleidet sich praktisch mit einer einfachen, hellen Leinenbluse und einer weiten, dunkelbraunen Hose, in deren Taschen sich ihre Smaragdnatter \textbf{Havel} versteckt hält. Ihr Beruf lässt sich an ihren stets mit Tinte befleckten Händen leicht erkennen.
 
 \spaltenende
+\vfill
+\includegraphics[width=\linewidth]{offene_lizenz/awoodedlandscape}
